Scroll documentElement using LayoutView natively

When computing the scroll-chain for a gesture, only Elements can be
added to the chain. However, the document element (i.e. <html>) doesn't
have a ScrollableArea itself. Its scrolling is delegated to the
document *node* (i.e. the LayoutView) which cannot be added to the
chain. Thus, we use the documentElement to represent scrolling the
LayoutView. See ScrollManager::RecomputeScrollChain to see this
explicitly in code.

When actually performing the scroll we need to reverse the above
substitution but we currently have a bug: in Element::NativeApplyScroll
we apply this substitution if we're scrolling the effective root
scroller rather than the document element. If the root scroller API is
enabled and the root scroller is changed to a different element, the
document can no longer be scrolled since it will fail to reverse the
documentElement<->LayoutView substitution and try to use the document
element's ScrollableArea which doesn't exist.

A similar fix is needed in LogicalScroll for keyboard scrolls. This
complicated logic is encoded in the scroll-chain calculation so I've
rewritten that method to use the scroll chain for consistency.

An additional change is needed since LayoutView::Scroll uses
LocalFrameView::GetScrollableArea to scroll. In the main frame, this
will be the RootFrameViewport which uses the global root scroller as
the layout viewport. Thus, if the root scroller is set to another
element, scrolling the LayoutView would actually scroll that element.
The global root scroller will always be scrolled using the correct
ScrollableArea via the ViewportScrollCallback so LayoutView shouldn't
be treated specially in this case. In fact, I've removed
LayoutBox::Scroll and its overrides altogether and replaced its
call sites with ScrollableArea directly.

Bug: 813747
Change-Id: I9e9a27ff684abf969c27ac152c860778a7e00e39
Reviewed-on: https://chromium-review.googlesource.com/1018880
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553303}
Former-commit-id: eebeab8487b2fb74cf048e5e24cf5678856cf44e