third_party/blink/renderer/core/layout/layout_embedded_object.cc
@@ -143,11 +143,6 @@ void LayoutEmbeddedObject::UpdateLayout() {
   ClearNeedsLayout();
 }
 
-ScrollResult LayoutEmbeddedObject::Scroll(ScrollGranularity granularity,
-                                          const FloatSize&) {
-  return ScrollResult();
-}
-
 CompositingReasons LayoutEmbeddedObject::AdditionalCompositingReasons() const {
   if (RequiresAcceleratedCompositing())
     return CompositingReason::kPlugin;
